--- a/src/app/shared/components/form/button/button.component.html
+++ b/src/app/shared/components/form/button/button.component.html
@@ -1,1 +1,1 @@
-<button class="btn btn-dark rounded-pill d-block w-100" type="button">{{ text }}</button>
+<button class="btn btn-dark rounded-pill d-block w-100" type="submit" [disabled]="disable">{{ text }}</button>
